css/main.css
@font-face {
    font-family: "jquery-ui";
    src: url("//cdn.jsdelivr.net/npm/jquery-ui-iconfont@2.3.2/font/jquery-ui.woff2") format('woff2') !important;
}

body > .container {
  /* margin-bottom: 50px; */
}

.container {
  scroll-snap-type: y mandatory;
}

.flip-h{
        -moz-transform: scaleX(-1);
        -webkit-transform: scaleX(-1);
        -o-transform: scaleX(-1);
        transform: scaleX(-1);
        -ms-filter: fliph; /*IE*/
        filter: fliph; /*IE*/
}

.footer {
  background-color: #f5f5f5;
  bottom: 0;
  height: 60px; /* Set the fixed height of the footer here */
  line-height: 60px; /* Vertically center the text there */
  /* margin-top: 50px; */
  position: fixed;
  width: 100%;
}

.snap {
  min-height: 300px;
  height: 100vh;
  scroll-snap-align: start;
}

.bi-bootstrap-fill {
  color: #6e07bd;
}

.ui-icon-jquery {
  color: #4f81bd;
}

.dt-js {
  position: relative;
  top: 2px;
  background-position: center;
  background-image: url("https://www.datatables.net/favicon.ico");
  display: inline-block;
  height: 16px;
  width: 16px;
}

.popper-js {
  display: inline-block;
  line-height: 1;
}

